# custom-blender-worker

./: .gitignore  Dockerfile  README.md  app.go  go.mod  main.go  package-lock.json  package.json  requirements.txt  start.sh  wails.json
.github/workflows/: build.yaml
custom-blender-worker/: package-lock.json  package.json  pyproc.spec  pyproject.toml
custom-blender-worker/dcp_custom_blender_worker/: main.py
custom-blender-worker/examples/: deploy-job.js
dcp_custom_blender_worker/: main.py
examples/: package.json
frontend/: package-lock.json  package.json  package.json.md5
frontend/src/lib/: custom-types.ts  dcp-logo.svelte  distributive-logo.svelte  worker-button.svelte
frontend/src/lib/wailsjs/go/main/: App.d.ts  App.js
frontend/src/routes/: +page.svelte
src/: index.js
